@@ -1,3 +1,9 @@
+2021-03-05  Akira Kakuto  <kakuto@w32tex.org>
+
+	* pdfdev.c: Correct the incomplete fix on 2021-03-04.
+	* pdffont.c: Avoid unnecessary warnings, reported in
+	https://tug.org/pipermail/dvipdfmx/2021-March/000242.html
+
 2021-03-04  Akira Kakuto  <kakuto@w32tex.org>
 
 	* pdfdev.c: Fix to call mktexpk with correct arguments when
